add translation strings & create custom view

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -24,7 +24,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
-            android:text="@string/general_caption" />
+            android:text="@string/general_caption"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/secondNameInput"
@@ -58,7 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
-            android:text="@string/passport_caption" />
+            android:text="@string/passport_caption"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -91,7 +93,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
-            android:text="@string/user_caption" />
+            android:text="@string/user_caption"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/emailRegInput"
