--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -12,6 +12,8 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
@@ -73,7 +75,8 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="@string/passport_number_hint"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:maxLength="4" />
 
             <EditText
                 android:id="@+id/passportSeriesInput"
@@ -83,7 +86,8 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="@string/passport_series_hint"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:maxLength="6" />
         </LinearLayout>
 
         <TextView
