--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.sbb.sergobanjobanking.ui.home.HomeFragment"
+        android:name="com.sbb.sergobanjobanking.ui.account.AccountFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_account" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.sbb.sergobanjobanking.ui.dashboard.DashboardFragment"
+        android:name="com.sbb.sergobanjobanking.ui.stockmarket.StockMarketFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_stock_market" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.sbb.sergobanjobanking.ui.notifications.NotificationsFragment"
+        android:name="com.sbb.sergobanjobanking.ui.settings.SettingsFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_settings" />
 </navigation>
